Among several other changes, the cart now reacts to objects it senses in front of it by reversing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,10 +5,6 @@ include_directories(${GAZEBO_INCLUDE_DIRS})
 link_directories(${GAZEBO_LIBRARY_DIRS})
 list(APPEND CMAKE_CXX_FLAGS "${GAZEBO_CXX_FLAGS}")
 
-add_library(hello_world SHARED hello_world.cc)
-target_link_libraries(hello_world ${GAZEBO_LIBRARIES})
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GAZEBO_CXX_FLAGS}")
-
 add_library(model_push SHARED model_push.cc)
 target_link_libraries(model_push ${GAZEBO_LIBRARIES} ${Boost_LIBRARIES})
 
@@ -18,5 +14,8 @@ target_link_libraries(model_pull ${GAZEBO_LIBRARIES} ${Boost_LIBRARIES})
 add_library(model_car SHARED model_car.cpp)
 target_link_libraries(model_car ${GAZEBO_LIBRARIES} ${Boost_LIBRARIES})
 
-add_library(laser_car SHARED laser_car.cpp)
+add_library(laser_car SHARED laser_car.cc)
 target_link_libraries(laser_car ${GAZEBO_LIBRARIES} ${Boost_LIBRARIES})
+
+add_library(VehiclePlugin SHARED VehiclePlugin.cc)
+target_link_libraries(VehiclePlugin laser_car ${GAZEBO_LIBRARIES} ${Boost_LIBRARIES})
