Changed our code structure, including naming conventions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,20 +5,23 @@ include_directories(${GAZEBO_INCLUDE_DIRS})
 link_directories(${GAZEBO_LIBRARY_DIRS})
 list(APPEND CMAKE_CXX_FLAGS "${GAZEBO_CXX_FLAGS}")
 
-add_library(model_push SHARED model_push.cc)
-target_link_libraries(model_push ${GAZEBO_LIBRARIES} ${Boost_LIBRARIES})
+add_library(sdcBox SHARED sdcBox.cpp)
+target_link_libraries(sdcBox ${GAZEBO_LIBRARIES} ${Boost_LIBRARIES})
 
-add_library(model_pull SHARED model_pull.cpp)
-target_link_libraries(model_pull ${GAZEBO_LIBRARIES} ${Boost_LIBRARIES})
+add_library(sdcFlyingBox SHARED sdcFlyingBox.cc)
+target_link_libraries(sdcFlyingBox ${GAZEBO_LIBRARIES} ${Boost_LIBRARIES})
 
-add_library(model_car SHARED model_car.cpp)
-target_link_libraries(model_car ${GAZEBO_LIBRARIES} ${Boost_LIBRARIES})
+#add_library(model_car SHARED model_car.cpp)
+#target_link_libraries(model_car ${GAZEBO_LIBRARIES} ${Boost_LIBRARIES})
 
-add_library(laser_car SHARED laser_car.cc)
-target_link_libraries(laser_car ${GAZEBO_LIBRARIES} ${Boost_LIBRARIES})
+add_library(sdcLaserSensor SHARED sdcLaserSensor.cc)
+target_link_libraries(sdcLaserSensor ${GAZEBO_LIBRARIES} ${Boost_LIBRARIES})
 
-add_library(VehiclePlugin SHARED VehiclePlugin.cc)
-target_link_libraries(VehiclePlugin laser_car ${GAZEBO_LIBRARIES} ${Boost_LIBRARIES})
+add_library(sdcGpsSensor SHARED sdcGpsSensor.cc)
+target_link_libraries(sdcGpsSensor ${GAZEBO_LIBRARIES} ${Boost_LIBRARIES})
 
-add_library(car_gps SHARED car_gps.cc)
-target_link_libraries(car_gps ${GAZEBO_LIBRARIES} ${Boost_LIBRARIES})
+add_library(sdcCar SHARED sdcCar.cc)
+target_link_libraries(sdcCar ${GAZEBO_LIBRARIES} ${Boost_LIBRARIES})
+
+add_library(sdcDriver SHARED sdcDriver.cc)
+target_link_libraries(sdcDriver sdcCar sdcLaserSensor sdcGpsSensor ${GAZEBO_LIBRARIES} ${Boost_LIBRARIES})
