Well. There it is.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,9 @@ target_link_libraries(sdcTopLaserSensor sdcSensorData ${GAZEBO_LIBRARIES} ${Boos
 add_library(sdcGpsSensor SHARED sdcGpsSensor.cc)
 target_link_libraries(sdcGpsSensor sdcSensorData ${GAZEBO_LIBRARIES} ${Boost_LIBRARIES})
 
+add_library(sdcCameraSensor SHARED sdcCameraSensor.cc)
+target_link_libraries(sdcCameraSensor sdcSensorData ${GAZEBO_LIBRARIES} ${Boost_LIBRARIES})
+
 add_library(Angle SHARED Angle.cc)
 target_link_libraries(Angle ${GAZEBO_LIBRARIES} ${Boost_LIBRARIES})
 
