--- a/models/comps_road/model.config
+++ b/models/comps_road/model.config
@@ -3,7 +3,7 @@
 <model>
   <name>Comps Road</name>
   <version>1.0</version>
-  <sdf version="1.4">model-1_4.sdf</sdf>
+  <!--<sdf version="1.4">model-1_4.sdf</sdf>-->
   <sdf version="1.5">model.sdf</sdf>
 
   <author>
