OpenCV successfully linked to Gazebo

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,19 @@ cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
 find_package(gazebo REQUIRED)
 include_directories(${GAZEBO_INCLUDE_DIRS})
 link_directories(${GAZEBO_LIBRARY_DIRS})
+
+find_package(OpenCV REQUIRED)
+include_directories(${OPENCV_INCLUDE_DIRS})
+#link_directories(${OPENCV_LIBRARY_DIRS})
+
+MESSAGE(WARNING ${GAZEBO_LIBRARIES})
+MESSAGE(WARNING ${OpenCV_LIBS})
+MESSAGE(WARNING ${OPENCV_INCLUDE_DIRS})
+MESSAGE(WARNING ${OPENCV_LIBRARY_DIRS})
+MESSAGE(WARNING ${OPENCV_LIBS})
+
 list(APPEND CMAKE_CXX_FLAGS "${GAZEBO_CXX_FLAGS}")
+
 
 add_library(sdcBox SHARED sdcBox.cpp)
 target_link_libraries(sdcBox ${GAZEBO_LIBRARIES} ${Boost_LIBRARIES})
@@ -24,7 +36,7 @@ add_library(sdcGpsSensor SHARED sdcGpsSensor.cc)
 target_link_libraries(sdcGpsSensor sdcSensorData ${GAZEBO_LIBRARIES} ${Boost_LIBRARIES})
 
 add_library(sdcCameraSensor SHARED sdcCameraSensor.cc)
-target_link_libraries(sdcCameraSensor sdcSensorData ${GAZEBO_LIBRARIES} ${Boost_LIBRARIES})
+target_link_libraries(sdcCameraSensor sdcSensorData ${GAZEBO_LIBRARIES} ${Boost_LIBRARIES} ${OpenCV_LIBS})
 
 add_library(Angle SHARED Angle.cc)
 target_link_libraries(Angle ${GAZEBO_LIBRARIES} ${Boost_LIBRARIES})
