--- a/models/intersection/model.config
+++ b/models/intersection/model.config
@@ -1,6 +1,6 @@
 <?xml version="1.0" ?>
 <model>
-    <name>comps_road_short</name>
+    <name>Intersection</name>
     <version>1.0</version>
     <sdf version="1.5">model.sdf</sdf>
     <author>
