--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,8 +16,11 @@ target_link_libraries(sdcBox ${GAZEBO_LIBRARIES} ${Boost_LIBRARIES})
 add_library(sdcFlyingBox SHARED sdcFlyingBox.cc)
 target_link_libraries(sdcFlyingBox ${GAZEBO_LIBRARIES} ${Boost_LIBRARIES})
 
+add_library(Angle SHARED Angle.cc)
+target_link_libraries(Angle ${GAZEBO_LIBRARIES} ${Boost_LIBRARIES})
+
 add_library(sdcSensorData SHARED sdcSensorData.cc)
-target_link_libraries(sdcSensorData ${GAZEBO_LIBRARIES} ${Boost_LIBRARIES})
+target_link_libraries(sdcSensorData Angle ${GAZEBO_LIBRARIES} ${Boost_LIBRARIES})
 
 add_library(sdcLaserSensor SHARED sdcLaserSensor.cc)
 target_link_libraries(sdcLaserSensor sdcSensorData ${GAZEBO_LIBRARIES} ${Boost_LIBRARIES})
@@ -25,14 +28,20 @@ target_link_libraries(sdcLaserSensor sdcSensorData ${GAZEBO_LIBRARIES} ${Boost_L
 add_library(sdcTopLaserSensor SHARED sdcTopLaserSensor.cc)
 target_link_libraries(sdcTopLaserSensor sdcSensorData ${GAZEBO_LIBRARIES} ${Boost_LIBRARIES})
 
+add_library(sdcSideLaserSensor SHARED sdcSideLaserSensor.cc)
+target_link_libraries(sdcSideLaserSensor sdcSensorData ${GAZEBO_LIBRARIES} ${Boost_LIBRARIES})
+
+add_library(sdcBackLaserSensor SHARED sdcBackLaserSensor.cc)
+target_link_libraries(sdcBackLaserSensor sdcSensorData ${GAZEBO_LIBRARIES} ${Boost_LIBRARIES})
+
 add_library(sdcGpsSensor SHARED sdcGpsSensor.cc)
 target_link_libraries(sdcGpsSensor sdcSensorData ${GAZEBO_LIBRARIES} ${Boost_LIBRARIES})
 
 add_library(sdcCameraSensor SHARED sdcCameraSensor.cc)
 target_link_libraries(sdcCameraSensor sdcSensorData ${GAZEBO_LIBRARIES} ${Boost_LIBRARIES} ${OpenCV_LIBS})
 
-add_library(Angle SHARED Angle.cc)
-target_link_libraries(Angle ${GAZEBO_LIBRARIES} ${Boost_LIBRARIES})
+# add_library(Waypoint SHARED Waypoint.cc)
+# target_link_libraries(Waypoint ${GAZEBO_LIBRARIES} ${Boost_LIBRARIES})
 
 add_library(sdcCar SHARED sdcCar.cc)
 target_link_libraries(sdcCar Angle sdcSensorData sdcGpsSensor sdcLaserSensor ${GAZEBO_LIBRARIES} ${Boost_LIBRARIES})
